@@ -84,6 +84,7 @@ val print : formatter -> t -> unit;;
 exception Errors of int;;
 
 val check_fatal : unit -> unit;;
+val reset_fatal: unit -> unit
 
 val help_warnings: unit -> unit
 
